--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </ul>
     <ul></ul>
     <ul></ul>
-    <button onclick="createElements()">ok</button>
+    <button onclick="createElements(event)">Ok</button>
+    <button onclick="removeFromDoc()">Del</button>
+    <input type="text" name="fruit" id="add" onchange="addFruit()">
 
     <script src="js/event.js"></script>
 </body>
